# bank-records

./: CMakeLists.txt  main.cpp  runAllTests.cpp
test/: CMakeLists.txt  runAllTests.cpp  testStructures.cpp  testStructures.hpp
user_input/: CMakeLists.txt  readUserInput.cpp  readUserInput.hpp
user_input/test/: CMakeLists.txt  testUserInput.cpp  testUserInput.hpp
